# linear-models-from-scratch

./: README.md  gitlab-ci.yml  pyproject.toml
notebooks/: test.ipynb
src/: linearModel.py  linearRegression.py  logisticRegression.py
tests/: test_model.py
